# motivacional-meme-generator-project

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_implementation.py
scripts/: bootstrap.sh  build_package.sh  e2e_test.py
src/: meme.py
src/QuoteEngine/: csv_ingestor.py  docx_ingestor.py  ingestor.py  ingestor_interface.py
src/motivacional_meme_generator/: MemeEngine.py  __init__.py  app.py  cli.py  web.py
src/motivacional_meme_generator/QuoteEngine/: __init__.py  csv_ingestor.py  pdf_ingestor.py  quote_model.py  text_ingestor.py
src/motivacional_meme_generator/templates/: base.html
tests/: conftest.py  test_quoteengine.py
